# e2br3

./: .env  .gitignore  BACKEND-GAPS-REPORT.md  Cargo.toml  Dockerfile  MISSING_API_ENDPOINTS_REPORT.md  MODEL_IMPLEMENTATION_SUMMARY.md  PRODUCTION-PLAN.md  docker-compose.yml  new_result.txt  result.txt
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/examples/: export_validation_rules_json.rs
crates/libs/lib-core/src/: lib.rs
crates/libs/lib-core/src/_dev_utils/: dev_db.rs  mod.rs
crates/libs/lib-core/src/ctx/: error.rs  mod.rs
crates/libs/lib-core/src/model/: audit.rs  base_uuid.rs  case.rs  case_identifiers.rs  drug.rs  drug_reaction_assessment.rs  drug_recurrence.rs  e2br3_user.rs  error.rs  message_header.rs  mod.rs  modql_utils.rs  narrative.rs  organization.rs  parent_history.rs  patient.rs  presave_template.rs  reaction.rs  receiver.rs  safety_report.rs  terminology.rs  test_result.rs  user.rs
crates/libs/lib-core/src/serde/: flex_date.rs  mod.rs
crates/libs/lib-core/src/xml/: error.rs  export.rs  export_postprocess.rs  exporter.rs  import.rs  mod.rs  (+8 more)
crates/libs/lib-core/tests/: audit_trail.rs  audit_trail_extended.rs  cascade_delete.rs  case_crud.rs  case_identifiers_crud.rs  drug_crud.rs  drug_reaction_assessment_crud.rs  drug_recurrence_crud.rs  error_cases.rs  list_edge_cases.rs  message_header_crud.rs  narrative_crud.rs  organization_crud.rs  parent_history_crud.rs  patient_crud.rs  reaction_crud.rs  receiver_crud.rs  rls_access.rs  rls_policies_extended.rs  rule_source_parity_matrix.rs  safety_report_crud.rs  terminology_queries.rs  test_result_crud.rs  user_crud.rs  xml_export_e.rs  xml_export_f.rs  xml_export_g.rs  xml_export_h.rs  xml_import_e.rs  xml_import_f.rs  xml_import_g.rs  xml_import_h.rs  xml_patch_c.rs  xml_patch_d.rs  xml_patch_e.rs  xml_patch_f.rs  xml_patch_g.rs  xml_patch_h.rs  xml_schema_business_ci.rs  xml_validation.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/examples/: README.md  demo_seed_cases.rs  demo_seed_users_orgs.rs  quick_dev.rs  xml_create_validate_export.rs  xml_generate_dev.rs  xml_generate_samples.rs  xml_merge_reaction_outcome.rs  xml_modify_all.rs
crates/services/web-server/src/: lib.rs  main.rs  submission.rs
crates/services/web-server/tests/: audit_web.rs  auth_mw_audit.rs  case_intake_web.rs  case_validation_web.rs  error_mapping_web.rs  mfds_import_samples_web.rs  middleware_ctx.rs  rbac_audit.rs  rbac_cases.rs  rbac_drug.rs  rbac_narrative.rs  rbac_organizations.rs  rbac_patient.rs  rbac_safety_report.rs  rbac_subresources.rs  rbac_users.rs  rls_web.rs  roundtrip_profiles_web.rs  subresources_web.rs  terminology_web.rs  validation_rules_web.rs  xml_import_export.rs
(+202 files in other folders)
