[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils"}
lib-rest-core = { path = "../../libs/lib-rest-core"}
lib-auth = { path = "../../libs/lib-auth"}
lib-core = { path = "../../libs/lib-core"}
lib-web = { path = "../../libs/lib-web"}
# -- Async
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { workspace = true }
# -- Web
axum = { workspace = true, features = ["multipart"] }
tower-http = { workspace = true }
tower-cookies = { workspace = true }
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Others
time = { workspace = true }
uuid = {version = "1", features = ["v4","fast-rng",]}
modql = { workspace = true }
strum_macros = "0.26"
derive_more = { workspace = true }

[dev-dependencies]
httpc-test = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serial_test = "3"
tower = "0.5"
sqlx = { workspace = true }
hmac = "0.12"
sha2 = "0.10"

[[example]]
name = "case_create_fda_minimal"
path = "examples/case_creation/fda_minimal.rs"

[[example]]
name = "case_create_ich_minimal"
path = "examples/case_creation/ich_minimal.rs"

[[example]]
name = "case_create_fda_validation_batch"
path = "examples/case_creation/fda_validation_batch.rs"

[[example]]
name = "case_create_fda_submission_pack"
path = "examples/case_creation/fda_submission_pack.rs"

[[example]]
name = "import_export_fda_roundtrip"
path = "examples/import_export/fda_xml_roundtrip.rs"

[[example]]
name = "import_export_ich_roundtrip"
path = "examples/import_export/ich_xml_roundtrip.rs"
